--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -129,3 +129,239 @@ body {
     font-weight: 300;
     background: linear-gradient(90deg, #79C8A3, #3B6250);
 }
+
+/*************************************************************/
+@keyframes hover_anim_add {
+    0%  {
+        border-radius:              100px;
+        }
+    70% {
+        border-radius:              20px;
+        scale:                      1.1;
+        box-shadow:               #19f420 0px 0px 10px;
+        }
+    100%{
+        scale:                      1;
+        background:                 linear-gradient(180deg,#79C8A3,rgb(0, 255, 162));
+        }
+}
+
+@keyframes hover_anim_remove {
+    0%  {
+        border-radius:               100px;
+        }
+    70% {
+        border-radius:               20px;
+        scale:                       1.1;
+        box-shadow:                #ff2882 0px 0px 10px;
+        }
+    100%{
+        scale: 1;
+        background:                  linear-gradient(180deg,#ff2424,rgb(255, 0, 106));
+
+        }
+}
+
+@keyframes hover_anim_close {
+    0%  {
+        border-radius:               100px;
+        box-shadow:                #1ab66d 0px 0px 0px;
+        }
+    70% {
+        border-radius:               10px;
+        scale:                       1.1;
+        box-shadow:                #79C8A3 0px 0px 20px;
+        }
+    100%{
+        scale: 0.5;
+        background:                  linear-gradient(190deg, #79C8A3, #3B6250);
+
+        }
+}
+:root {
+    --button_size:                   25px
+}
+
+.add-button {
+    background:                      linear-gradient(90deg,#79C8A3,rgb(0, 255, 162));
+    border:                          solid rgb(9, 255, 185) 2px;
+    border-radius:                   10px;
+    width:                           var(--button_size);
+    height:                          var(--button_size);
+    font-weight:                     900;
+    font-style:                      normal;
+    text-align:                      center;
+    color: #000000;
+    visibility:                      hidden;
+    }
+
+.add-button:hover {
+    background:                      linear-gradient(180deg,#79C8A3,rgb(0, 255, 162));
+    border:                          solid rgb(9, 255, 185) 2px;
+    border-radius:                   10px;
+    width:                           var(--button_size);
+    height:                          var(--button_size);
+    font-weight:                     900;
+    font-style:                      normal;
+    text-align:                      center;
+
+    animation-timing-function:       cubic-bezier(.02,.68,1,.45);
+    animation-name:                  hover_anim_add;
+    animation-duration:              0.2s;
+    }   
+
+.remove-button {
+    background:                      linear-gradient(90deg,#ff2424,rgb(255, 0, 106));
+    border:                          none;
+    padding:                         5px;
+    border-radius:                   5px;
+    font-weight:                     900;
+    font-style:                      normal;
+    text-align:                      center;
+    color:                         #ffffff;
+    visibility:                      hidden;
+    }
+
+.remove-button:hover {
+    background:                      linear-gradient(180deg,#ff2424,rgb(255, 0, 106));
+    border:                          none;
+    border-radius:                   10px;
+    font-weight:                     900;
+    font-style:                      normal;
+    text-align:                      center;
+
+    animation-timing-function:       cubic-bezier(.02,.68,1,.45);
+    animation-name:                  hover_anim_remove;
+    animation-duration:              0.2s;
+    }   
+
+.edit-window{
+    visibility: hidden;
+    display:                        flex;
+    flex-direction:                 column;
+    position:                       fixed;
+    top:                            20%;
+    width:                          50%;
+    height:                         50%;
+    background-color:              #151515;
+    border-radius:                  30px;
+    padding:                        3%;
+    border:                         3px #3B6250 solid;
+}
+
+.edit-window-header{
+    display:                        flex;
+    justify-content:                left;
+    align-items:                    center;
+    background-color:              #333;
+    padding:                        10px;
+    height:                         40px;
+    border-radius:                  10px;
+}
+
+.edit-window-header h1{
+    padding-left:                   2%;
+}
+
+.edit-window-header img{
+    margin-left: 10px;
+    width: 20px;
+}
+
+#edit-search-bar {
+    margin-top: 10px;
+    display:                        flex;
+    align-items:                    center;
+    background-color:               #333;
+    padding:                        8px;
+    border-radius:                  10px;
+    border:                         none;
+    color:                        #e0e0e0;
+}
+#edit-search-bar:hover{
+    background-color: #3B6250;
+}
+
+#edit-search-bar:focus{
+    outline:                        3px solid #3B6250;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.edit-window hr {
+    color:                        #ffffff;
+    width:                          100%;
+}
+
+.close-button  {
+    border-style:                   none;
+    border-color:                   none;
+    width:                          85px;
+    height:                         40px;
+    border-radius:                  50px;
+    font-weight:                    300;
+    background:                     linear-gradient(90deg, #79C8A3, #3B6250);
+    margin-top:                     50px;
+  }
+
+  .close-button:hover  {
+    background:                     linear-gradient(190deg, #79C8A3, #3B6250);
+    animation-name:                 hover_anim_close;
+    animation-duration:             0.2s;
+  }
+
+.search-results-container{
+    margin-left:                    -3px;
+    margin-top:                     3px;
+    width:                          87%;
+    visibility:                     collapse;
+    position:                       absolute;
+    overflow:                       scroll;
+    border-radius:                  0px 0px 20px 20px;
+    background-color:              #151515;
+    border-top:                     4px solid#3B6250;
+    background-color:              #333;
+}
+
+.intern-card{
+    text-align:                     left;
+    display:                        flex;
+}
+
+.intern-card:nth-of-type(2){
+   background-color:               #292929 ;
+}
+
+.intern-card:hover{
+    text-align:                     left;
+    display:                        flex;
+    background-color:             #646464;
+    }
+
+.intern-card p{
+    width:                          10%;
+    margin-right:                   auto;
+    margin-left:                    4%;
+    }
+
+.intern-card hr{
+    width:                          1px;
+    padding:                        2px;
+    margin:                         0px;
+    background-color:             #151515;
+    border:                         1px solid #151515;
+    }
+
+
+.unpaired-results{
+    margin-left:                    -3px;
+    margin-top:                     3px;
+    width:                          87%;
+    visibility:                     collapse;
+    overflow:                       scroll;
+    background-color:              #151515;
+    border-top:                     4px solid#3B6250;
+    border-bottom:                     4px solid#3B6250;
+    background-color:              #333;
+}
+
+/*Make Changes for mobile*/
