--- a/src/stylesheets/mobile-results-style.css
+++ b/src/stylesheets/mobile-results-style.css
@@ -47,6 +47,8 @@
         display: none;
     }
 
+    .mobile-back-button {
+        display: none;
 }
 
 @media (max-width: 450px) {
@@ -126,5 +128,18 @@
 
     .blur-fade-2 {
         display: none;
+    }
+
+    .mobile-back-button {
+        display: block;
+        border-style: none;
+        border-color:  none;
+        border-radius: 20px;
+        margin-right: 5px;
+        align-self: end;
+        width: 50px;
+        height: 30px;
+        background-color: #292929;
+        border: 1px solid #454545
     }
 }
