--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -149,3 +149,6 @@ body {
     font-weight: 300;
     background: linear-gradient(90deg, #79C8A3, #3B6250);
 }
+
+.mobile-back-button {
+    display: none;
