--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -47,7 +47,7 @@
   
   .overview .logo-background {
     position: absolute;
-    width: 880px;
+    width: 100%;
     height: 832px;
     top: 51px;
     left: 650px;
@@ -198,10 +198,10 @@
   
   /* Intern Pool Big Box */
   .left-side {
-    width: 763px;
-    height: 585px;
+    width: 50%;
+    height: 60%;
     top: 189px;
-    left: 73px;
+    left: 7%;
     background-color: #151515;
     border: 1px solid;
     border-color: #646464;
@@ -209,7 +209,7 @@
     border-radius: 15px;
     box-shadow: 0px 4px 4px #2120201a;
     padding: 20px;
-    margin-right: 50px;
+   
   }
   
   .left-side h1 {
@@ -296,7 +296,7 @@
   tbody {
     display: block;
     max-height: 250px;
-    width: 763px;
+    width: 400%;
     overflow-y: auto;
     background-color: #1e1e1e;
   }
@@ -336,6 +336,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     box-sizing: border-box;
     position: absolute; /* Now it's positioned relative to .intern-box */
     bottom: 0; /* This positions it at the bottom of the intern box */
@@ -400,10 +401,10 @@
   /* Pairing Big Box */
   .right-side .pairing-box {
     position: absolute;
-    width: 431px;
-    height: 596px;
+    width: 25%;
+    height: 61.1%;
     top: 188px;
-    left: 900px;
+    left: 65%;
     background-color: #151515;
     border-radius: 15px;
     border: 1px solid;
