--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -249,6 +249,7 @@ body {
     border-radius:                  30px;
     padding:                        3%;
     border:                         3px #3B6250 solid;
+    z-index:                        2;
 }
 
 .edit-window-header{
