--- a/src/stylesheets/results-modul-styles.css
+++ b/src/stylesheets/results-modul-styles.css
@@ -107,16 +107,17 @@
 
 .edit-window{
     visibility: hidden;
-    display:                        flex;
-    flex-direction:                 column;
-    position:                       fixed;
-    top:                            20%;
-    width:                          50%;
-    height:                         50%;
-    background-color:              #151515;
-    border-radius:                  30px;
-    padding:                        3%;
-    border:                         3px #3B6250 solid;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 20%;
+    width: 50%;
+    height: 50%;
+    background-color:#151515;
+    border-radius: 30px;
+    padding: 3%;
+    border: 3px #3B6250 solid;
+    z-index: 2;
 }
 
 .edit-window-header{
