--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -148,6 +148,7 @@ body {
     border-radius: 50px;
     font-weight: 300;
     background: linear-gradient(90deg, #79C8A3, #3B6250);
+    display: none;
 }
 
 .mobile-back-button {
