--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -15,9 +15,9 @@ ul {
 main {
     display: flex;
     justify-content: center;
-    border: 1px solid red;
     width: 100%;
-    border: 1px solid blue;
+
+    
 }
 
 
@@ -28,11 +28,13 @@ main {
     align-items: center;
     flex-direction: column;
     height: auto;
-    background-color: #151515;
+    background-color: transparent;
     border-radius: 15px;
     padding: 2%;
     padding-top: 10px;
     padding-bottom: 1px;
+    border: 1px solid rgb(59, 59, 59);
+  
   
 }
 
@@ -43,15 +45,13 @@ main {
     height: auto;
     background-color: #272727;
     border-radius: 20px;
-    z-index: 1;
-    
-  
 }
 
 .results-list{
     width: 100%;
     height: 400px;
     overflow-y: auto;
+
     
 }
 
@@ -62,10 +62,10 @@ main {
     align-items: center;
     height: 50px;
     width: 100%;
-    background-color: #5fa886;
+    background-color: #272727;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
-    border-bottom: 2px solid #000000;
+    border-bottom: 1px solid #646464;
     position: sticky;
     top: 0;
 
@@ -75,7 +75,6 @@ main {
     display: flex;
     width: 200px;
     font-size: 30px;
-    color: #000000;
 }
 
 .invisible-green-button {
