--- a/src/stylesheets/results-style.css
+++ b/src/stylesheets/results-style.css
@@ -16,24 +16,21 @@ main {
     display: flex;
     justify-content: center;
     width: 100%;
-
-    
 }
 
 
 .main-content {
     display: flex;
-    width: 70%;
+    width: 80%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: auto;
+    height: 90%;
     background-color: transparent;
     border-radius: 15px;
     padding: 2%;
     padding-top: 10px;
     padding-bottom: 1px;
-  
 }
 
 .results {
@@ -45,13 +42,25 @@ main {
     border-radius: 20px;
 }
 
+
 .results-list{
     width: 100%;
     height: 400px;
     overflow-y: auto;
-
-    
 }
+
+.results-list::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  .results-list::-webkit-scrollbar-thumb {
+    background-color: #bababa;
+    border-radius: 10px;
+  }
+  
+  .results-list::-webkit-scrollbar-track {
+    background-color: #3b3b3b41;
+  }
 
 .intern-headers {
     display: flex;
