--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -31,7 +31,7 @@ html, body {
 }
 
   
-.blur-fade { 
+.header-blur { 
   position: fixed; /* Fixed to the top */
   width: 100%; 
   height: 151px;
@@ -43,7 +43,7 @@ html, body {
 }
 
 
-.blur-fade-2 { 
+.footer-blur { 
   position: fixed; /* Fixed to the bottom */
   width: 100%; 
   height: 100px;
@@ -334,9 +334,6 @@ thead th, tbody td {
     width: 25%; /* Equal column widths, adjust as needed */
     padding: 10px;
     border-bottom: 1px solid #444;
-    
-    
-
 }
 
 thead th {
@@ -497,9 +494,6 @@ thead th {
     font-size: 18px;
     color: white;
     border: 10px;
-    
-
-
   }
   
   .pairing-list {
@@ -511,9 +505,7 @@ thead th {
   .pairing-list ul {
     list-style: none;
     padding: 0;
-    
-   
-    
+  
   }
   
   /* Individual box for Pairing box */
@@ -526,7 +518,6 @@ thead th {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-
   }
   
   .pairing-list::-webkit-scrollbar {
