feat(css): fixed css

--- a/src/stylesheets/results-modul-styles.css
+++ b/src/stylesheets/results-modul-styles.css
@@ -93,11 +93,12 @@
     position: fixed;
     top: 10%;
     width: 50%;
+    height: 70%;
     background-color: #151515;
     border-radius: 30px;
     padding: 3%;
     border: 3px #3B6250 solid;
-    z-index: 100;
+    z-index: 6;
 }
 
 .edit-window-header{
@@ -147,7 +148,8 @@
     border-radius: 50px;
     font-weight: 300;
     background: linear-gradient(90deg, #79C8A3, #3B6250);
-    margin-top: 50px;
+    z-index: 5;
+    margin-top: 15%;
   }
 
 .search-results-container{
@@ -173,6 +175,7 @@
     text-align: left;
     white-space: nowrap;
     display: flex;
+ 
 }
 
 .intern-card:nth-of-type(odd){
@@ -190,6 +193,7 @@
     margin-right: auto;
     margin-left: 4%;
     }
+    
 
 .intern-card hr{
     display: none;
@@ -251,6 +255,7 @@
     background-color: #333;
     scrollbar-width: none;
 }
+
 .recent-results::-webkit-scrollbar
 {
     visibility: hidden;
@@ -318,4 +323,10 @@
     }
 .mobile-back-button {
     display: none;
+}
+
+.edit-window-footer {
+height: 30%;
+width: 30%;
+position: relative;
 }
